--- a/src/pages/creation/forgotpassword.module.css
+++ b/src/pages/creation/forgotpassword.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     gap: 24px;
+    margin-top: 12px;
 }
 
 .title {
@@ -22,8 +23,28 @@
     row-gap: 12px;
 }
 
-.secretForm input {
-    width: 27%;
+.inputWrapper {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+}
+
+.inputNumber {
+    display: flex;
+}
+
+.whiteSpace {
+    color: transparent;
+}
+
+.inputWrapper input {
+    /* width: 27%; */
+    padding-left: 8px;
+    padding-right: 8px;
+    display: flex;
+    width: 100%;
 }
 
 .btns_wrapper {
