--- a/src/pages/creation/index.module.css
+++ b/src/pages/creation/index.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 54px;
+    margin-top: 20px;
 }
 
 .title {
@@ -22,6 +23,12 @@
 
 .inputForm input {
     text-align: center;
+}
+
+.errorMessage {
+    position: absolute;
+    bottom: 100px;
+    color: red;
 }
 
 .btns_wrapper {
