--- a/src/pages/creation/secretphrase.module.css
+++ b/src/pages/creation/secretphrase.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 32px;
+    gap: 27px;
+    margin-top: 12px;
 }
 
 .title {
