--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 60px;
+    gap: 50px;
+    margin-top: 30px;
 }
 
 .title {
