--- a/src/pages/receive/index.module.css
+++ b/src/pages/receive/index.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 24px;
+    gap: 16px;
+    margin-top: 12px;
 }
 
 .inputForm {
