--- a/src/pages/sendto/index.module.css
+++ b/src/pages/sendto/index.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
+    margin-top: 30px;
 }
 
 .inputForm {
