--- a/src/pages/signtx/index.module.css
+++ b/src/pages/signtx/index.module.css
@@ -1,8 +1,10 @@
 .wrapper {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
+    margin-top: 30px;
 }
 
 .inputForm {
@@ -14,4 +16,15 @@
 .inputWhat {
     font-size: 16px;
     font-weight: 700;
+}
+
+.errorMessage {
+    width: 90%;
+    font-size: 16px;
+    line-height: 21px;
+    height: 42px;
+    color: red;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
