--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -62,9 +62,18 @@
     font-size: 16px;
 }
 
-.forgot {
-    color: blue;
+.bottom_wrapper {
     position: absolute;
     bottom:20px;
     text-decoration: underline;
+    display: flex;
+    gap: 24px;
+}
+
+.forgot {
+    color: blue;
+}
+
+.activity {
+    color: green;
 }
