--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,8 @@
 .wrapper {
-  width: 300px;
-  height: 340px;
+  width: 350px;
+  height: 550px;
   display: flex;
   /* align-items: center; */
-  padding-top: 60px;
-  justify-content: center;
+  /* justify-content: center; */
+  /* padding-top: 60px; */
 }
