--- a/src/components/button/index.module.css
+++ b/src/components/button/index.module.css
@@ -1,23 +1,34 @@
-.btn {
+.container {
+    width: 100%;
+    height: 48px;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
     cursor: pointer;
+    background: #0096F4;
+    border-radius: 24px;
 }
 
-.btn:hover {
-    filter: drop-shadow(0px 0px 8px #6A4DFD);
-    transform: translate(0, -2px);
+.container:hover {
+    filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.25));
 }
 
-.btn_text {
+.wrapper {
     display: flex;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    align-items: center;
+    gap: 8px;
+}
+
+.text {
+    display: flex;
     font-size: 16px;
-    font-weight: 700;
-    letter-spacing: 0.15em;
-    background-color: #6A4DFD;
     color: white;
     border-radius: 6px;
+}
+
+.right_symbol {
+    position: absolute;
+    right: 12px;
+    transform: rotate(180deg);
 }
