--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -1,74 +1,60 @@
-.wrapper {
-    position: absolute;
-    top: 16px;
-    left: 0px;
-    width: 100%;
-    display: flex;
-    /* gap: 24px; */
-}
-
 .container {
     width: 100%;
+    height: 46px;
+    background: #0096F4;
+}
+
+.wrapper {
+    height: 100%;
     padding-left: 16px;
     padding-right: 16px;
     display: flex;
-    /* align-items: baseline; */
+    flex: 1;
     align-items: center;
     justify-content: space-between;
 }
 
-.title {
-    font-size: 16px;
-    font-weight: 700;
-    border-radius: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
-    border: 1px solid gainsboro;
+.logo {
+    height: 26px;
 }
 
-.title:hover {
-    background-color: gainsboro;
-    cursor: pointer;
-}
-
-.switch_content_wrapper {
+.menus {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    font-size: 16px;
-    font-weight: 700;
+    gap: 16px;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    cursor: pointer;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+
+.menu:hover .menu_name {
+    font-weight: lighter;
+}
+
+.menu_chain {
+    position: absolute;
+    left: -4px;
+    top: 23px;
+    background: #49B8FD;
+    padding: 6px;
+    padding-right: 16px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    z-index: 101;
+}
+
+.menu_logo {
+    height: 13px;
+}
+
+.menu_name {
+    font-size: 13px;
     color: white;
-}
-
-.switch_content {
-    display: flex;
-    transform: translate(0, -1px);
-}
-
-.switch_icon_wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-.switch_icon {
-    display: flex;
-    width: 80%;
-}
-
-.back_wrapper {
-    display: flex;
-}
-
-.back {
-    width: 40px;
-    height: 40px;
-}
-
-.back:hover {
-    transform: translate(0, -2px);
-    cursor: pointer;
 }
