--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,21 @@
   src: url("FontsFree-Net-Segoe-UI.ttf");
 }
 
+@font-face {
+  font-family: "font-regular";
+  src: url("Roboto-Regular.ttf");
+}
+
+@font-face {
+  font-family: "font-bold";
+  src: url("Roboto-Bold.ttf");
+}
+
 /* Defalt CSS */
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: font-bold, font-regular, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -22,14 +32,14 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: font-bold, font-regular, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 /* Cutom CSS */
 
 div {
-  font-family: 'app-font';
+  font-family: 'font-regular';
 }
 
 input {
@@ -37,23 +47,24 @@ input {
   background: transparent;
   box-sizing: border-box;
   outline: none;
-  border-radius: 4px;
-  font-family: 'app-font';
+  border-radius: 5px;
+  font-family: 'font-regular';
+  font-size: 16px;
   color: gray;
   /* text-align: center; */
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 input:focus {
-  border: 1px solid #6A4DFD;
-  filter: drop-shadow(0px 0px 6px #6A4DFD);
+  border: 1px solid #0096F4;
+  /* filter: drop-shadow(0px 0px 6px #0096F4); */
 }
 
 input:hover {
-  border: 1px solid #6A4DFD;
+  border: 1px solid #0096F4;
   /* filter: drop-shadow(0px 0px 8px #6A4DFD); */
 }
 
@@ -63,7 +74,7 @@ textarea {
   box-sizing: border-box;
   outline: none;
   border-radius: 4px;
-  font-family: 'app-font';
+  font-family: 'font-regular';
   color: gray;
   /* text-align: center; */
   padding-left: 16px;
@@ -74,7 +85,7 @@ textarea {
 
 textarea:focus {
   border: 1px solid #6A4DFD;
-  filter: drop-shadow(0px 0px 6px #6A4DFD);
+  /* filter: drop-shadow(0px 0px 6px #6A4DFD); */
 }
 
 textarea:hover {
