--- a/src/pages/activity/index.module.css
+++ b/src/pages/activity/index.module.css
@@ -1,116 +1,118 @@
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .wrapper {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 12px;
-    /* margin-top: 0px; */
-}
-
-.title {
-    font-size: 32px;
-    font-weight: 700;
-    text-align: center;
-    color: #6A4DFD;
-    filter: drop-shadow(0px 0px 8px #6A4DFD);
-}
-
-.activity_wrapper {
-    width: 100%;
     height: 100%;
-    overflow: scroll;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    overflow-y: auto;
 }
 
 .activity {
+    flex: 1;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid lightgray;
     display: flex;
-    gap: 12px;
-    width: 90%;
-    border-top: 1px solid gray;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 6px;
-    padding-bottom: 6px;
+    align-items: flex-start;
+    gap: 16px;
 }
 
-.activity_approved:hover {
-    cursor: pointer;
-    background: rgba(200, 200, 254, 0.8);
-}
-
-.activity_rejected:hover {
-    cursor: pointer;
-    background: rgba(200, 200, 254, 0.8);
-}
-
-.activity_pending:hover {
-    cursor: pointer;
-    background: rgba(200, 200, 254, 0.8);
-}
-
-.activity_symbol {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 32px;
-    height: 32px;
-    background: rgba(106, 77, 254, 0.8);
-    border-radius: 16px;
-}
-
-.activity_approved .activity_symbol {
-    background: rgba(106, 153, 103, 0.8);
-}
-
-.activity_rejected .activity_symbol {
-    background: rgba(203, 56, 53, 0.8);
-}
-
-.activity_pending .activity_symbol {
-    background: rgba(120, 121, 123, 0.8);
+.chain_logo {
+    width: 24px;
+    height: 24px;
 }
 
 .activity_content {
-    /* width: 100%; */
+    width: 100%;
     display: flex;
-    flex: 1;
     flex-direction: column;
+    gap: 6px;
+}
+
+.line_first {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 15px;
+}
+
+.activity_type {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.activity_amount {
+    display: flex;
+    align-items: baseline;
     gap: 4px;
 }
 
-.activity_top {
+.chain_symbol {
+    font-size: 13px;
+}
+
+.line_second {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
 }
 
-.activity_btn {
-    background: rgb(64, 64, 255);
-    color: white;
-    font-size: 11px;
+.activity_state {
     display: flex;
     align-items: center;
-    padding-left: 6px;
-    padding-right: 6px;
-    padding-top: 1px;
-    padding-bottom: 2px;
-    border-radius: 6px;
+    gap: 8px;
+    font-size: 13px;
 }
 
-.activity_bottom {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    font-size: 12px;
-}
-
-.activity_date {
-    color: green;
+.state_symbol {
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
 }
 
 .activity_to {
-    color: gray;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    color: #A3A3A3;
+}
+
+.from_to {
+    margin-left: 2px;
+    margin-right: 8px;
+}
+
+.date {
+    display: flex;
+    margin-right: auto;
+    font-size: 12px;
+    color: #A3A3A3;
+}
+
+.line_third {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.activity_btn {
+    width: 110px;
+}
+
+.error_429 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: bold;
+    color: darkred;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid lightgray;
 }
