--- a/src/pages/creation/forgotpassword.module.css
+++ b/src/pages/creation/forgotpassword.module.css
@@ -1,53 +1,65 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
-    width: 100%;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 24px;
-    margin-top: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .title {
-    font-size: 32px;
-    font-weight: 700;
+    font-size: 16px;
     text-align: center;
-    color: #6A4DFD;
-    filter: drop-shadow(0px 0px 8px #6A4DFD);
+    margin-top: 25px;
 }
 
 .secretForm {
-    width: 92%;
+    margin-top: 24px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    row-gap: 12px;
+    justify-content: space-between;
+    row-gap: 20px;
 }
 
-.inputWrapper {
-    width: 30%;
+.input_wrapper {
+    width: 32%;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 4px;
 }
 
-.inputNumber {
+.input_number {
     display: flex;
+    font-size: 13px;
 }
 
-.whiteSpace {
+.white_space {
     color: transparent;
 }
 
-.inputWrapper input {
-    /* width: 27%; */
-    padding-left: 8px;
-    padding-right: 8px;
+.input_wrapper input {
+    padding-left: 5px;
+    padding-right: 5px;
     display: flex;
     width: 100%;
+    font-size: 16px;
 }
 
-.btns_wrapper {
+.login_btn {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.error {
+    margin-top: 15px;
     display: flex;
-    gap: 60px;
+    font-size: 13px;
+    color:darkred;
 }
