--- a/src/pages/creation/index.module.css
+++ b/src/pages/creation/index.module.css
@@ -1,37 +1,62 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 54px;
-    margin-top: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
-.title {
-    font-size: 32px;
-    font-weight: 700;
-    text-align: center;
-    color: #6A4DFD;
-    filter: drop-shadow(0px 0px 8px #6A4DFD);
+.input_text {
+    margin-top: 25px;
+    font-size: 16px;
+    margin-bottom: 8px;
 }
 
-.inputForm {
+.input_description {
+    margin-top: 16px;
+    font-size: 13px;
+    align-self: flex-start;
     display: flex;
-    flex-direction: column;
+}
+
+.require_description {
+    color: gray;
+    margin-left: 8px;
+}
+
+.user_input {
+    margin-top: 4px;
+    width: 100%;
+}
+
+.input_error {
+    margin-top: 4px;
+    font-size: 13px;
+    align-self: flex-start;
+    color: darkred;
+}
+
+.create_btn {
+    margin-top: 40px;
+    width: 100%;
+}
+
+.import {
+    margin-top: 16px;
+    font-size: 13px;
+    display: flex;
     align-items: center;
-    gap: 24px;
+    gap: 8px;
+    cursor: pointer;
 }
 
-.inputForm input {
-    text-align: center;
-}
-
-.errorMessage {
-    position: absolute;
-    bottom: 100px;
-    color: red;
-}
-
-.btns_wrapper {
-    display: flex;
-    gap: 60px;
+.small_right {
+    transform: rotate(180deg);
+    height: 8px;
 }
