--- a/src/pages/creation/secretphrase.module.css
+++ b/src/pages/creation/secretphrase.module.css
@@ -1,39 +1,96 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 27px;
-    margin-top: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
 }
 
 .title {
-    font-size: 32px;
-    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
     text-align: center;
-    color: #6A4DFD;
-    filter: drop-shadow(0px 0px 8px #6A4DFD);
+    width: 200px;
+    margin-top: 25px;
 }
 
 .secretForm {
-    width: 90%;
-    height: 120px;
-    border: 1px solid rgba(0, 0, 0, 0.33);
-    border-radius: 4px;
+    margin-top: 24px;
+    width: 100%;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.secret {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 12px;
+}
+
+.input_wrapper {
+    width: 32%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+}
+
+.input_number {
+    display: flex;
+    color: gray;
+    font-size: 13px;
+}
+
+.white_space {
+    color: transparent;
+}
+
+.input_wrapper input {
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+    width: 100%;
+    height: 35px;
+    color: black;
+    font-size: 16px;
+}
+
+.copy_btn {
+    width: 100px;
+    margin-top: 16px;
+}
+
+.complete_check {
+    margin-top: 16px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    gap: 8px;
+    font-size: 13px;
 }
 
-.secretForm .secret {
+.complete_check input {
+    width: 18px;
+    height: 18px;
+}
+
+.login_btn {
     width: 100%;
-    padding-left: 12px;
-    padding-right: 12px;
-    font-size: 18px;
-    line-height: 27px;
-    text-align: center;
+    margin-top: 30px;
 }
 
-.btns_wrapper {
-    display: flex;
-    gap: 60px;
+.show_btn {
+    position: absolute;
+    top: 250px;
+    width: 148px;
 }
