--- a/src/pages/exportpriv/index.module.css
+++ b/src/pages/exportpriv/index.module.css
@@ -1,44 +1,89 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin-top: 30px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
-.inputForm {
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-}
-
-.inputWhat {
+.title {
+    margin-top: 40px;
     font-size: 16px;
-    font-weight: 700;
+    color: #0096F4;
+}
+
+.input_description {
+    margin-top: 40px;
+    font-size: 13px;
+    align-self: flex-start;
+}
+
+.wif {
+    align-self: flex-start;
+    margin-top: 24px;
+    font-size: 12px;
 }
 
 .priv {
-    width: 74%;
-    padding: 3%;
+    width: 100%;
+    margin-top: 16px;
+    box-sizing: border-box;
+    font-size: 16px;
+    line-height: 21px;
+    padding: 12px;
     margin-left: 10%;
-    /* margin-right: 10%; */
-    transform: translate(-1px, 0);
+    transform: translate(-16px, 0);
     overflow-wrap: anywhere;
     border: 1px solid gray;
     border-radius: 8px;
+    cursor: pointer;
+}
+
+.copy_symbol {
+    margin-left: 8px;
+}
+
+.priv:hover .copy_symbol {
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 1));
+    transform: translate(0, -1px);
+}
+
+.priv:active {
+    border: 1px solid lightgray;
+    font-weight: bold;
+    color: gray;
+}
+
+.password_input {
+    margin-top: 4px;
+    width: 100%;
 }
 
 .alert {
-    border: 1px solid gray;
-    border-radius: 8px;
-    background-color: rgba(215, 58, 73, 0.2);
-    width: 74%;
-    padding: 3%;
-    text-align: center;
+    width: 100%;
+    margin-top: 16px;
+    font-size: 13px;
+    line-height: 17px;
+    color: #FC3547;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
-.errorMessage {
-    color: red;
-    position: absolute;
-    bottom: 24px;
+.alert_title {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-weight: bold;
+}
+
+.confirm_btn {
+    width: 100%;
+    margin-top: 40px;
 }
