--- a/src/pages/receive/index.module.css
+++ b/src/pages/receive/index.module.css
@@ -1,22 +1,41 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
-    margin-top: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
 }
 
-.inputForm {
+.qrcode {
+    margin-top: 51px;
+}
+
+.address {
+    margin-top: 24px;
+    font-size: 13px;
     display: flex;
-    flex-direction: column;
-    gap: 6px;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
 }
 
-.inputWhat {
-    font-size: 16px;
-    font-weight: 700;
+.address:hover img {
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 1));
+    transform: translate(0, -1px);
 }
 
-.jpyRate {
+.address:active {
+    border: 1px solid lightgray;
     color: gray;
+    font-weight: bold;
+    border-radius: 24px;
+    padding: 2px 6px 2px 6px;
+    transform: translate(0, -4px);
 }
