--- a/src/pages/sendto/index.module.css
+++ b/src/pages/sendto/index.module.css
@@ -1,22 +1,45 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin-top: 30px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-top: 35px;
 }
 
-.inputForm {
+.input_what {
+    align-self: flex-start;
+    font-size: 13px;
+    margin-top: 16px;
+}
+
+.wrapper input {
+    margin-top: 4px;
+    width: 100%;
+}
+
+.amount_input {
+    width: 100%;
+    font-size: 13px;
     display: flex;
-    flex-direction: column;
-    gap: 6px;
+    align-items: flex-end;
+    gap: 8px;
 }
 
-.inputWhat {
-    font-size: 16px;
-    font-weight: 700;
+.jpy_rate {
+    margin-top: 8px;
+    align-self: flex-start;
+    font-size: 13px;
+    color: #A3A3A3;
 }
 
-.jpyRate {
-    color: gray;
+.confirm_btn {
+    width: 100%;
+    margin-top: 40px;
 }
