--- a/src/pages/signtx/signcomplete.module.css
+++ b/src/pages/signtx/signcomplete.module.css
@@ -1,33 +1,25 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 60px;
-    margin-top: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
-.title {
-    font-size: 40px;
-    font-weight: 700;
-    text-align: center;
-    color: #6A4DFD;
-    filter: drop-shadow(0px 0px 8px #6A4DFD);
-}
-
-.status_wrapper {
+.btn_wrapper {
+    margin-top: 25px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.status_title {
-    font-size: 24px;
-    font-weight: 700;
-}
-
-.status_progress {
-    font-size: 32px;
-    font-weight: 700;
-    text-align: center;
-    color: gray;
-    filter: drop-shadow(0px 0px 8px gray);
+.btn {
+    width: 150px;
 }
