--- a/src/pages/signtx/status.module.css
+++ b/src/pages/signtx/status.module.css
@@ -1,30 +1,25 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    /* gap: 30px; */
-    margin-top: 28px;
-}
-
-.step_wrapper {
-    display: flex;
-    flex-direction: row;
     align-items: center;
-    gap: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-top: 25px;
 }
 
-.status_symbol {
+.btn_wrapper {
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.step_title {
-    font-size: 20px;
-    font-weight: bold;
-    transform: translateY(-5px);
-}
-
-.step_line {
-   height: 32px;
-   width: 0px;
-   border: 1px solid gray;
-   margin-left: 21px;
+.btn {
+    width: 150px;
 }
